# content-producer

./: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a4acd1177c84_152_fz_compliance.py
data/memory/: 11b92a2e-855a-40d4-9492-f1c1349a7cee.jsonl  11b92a2e-855a-40d4-9492-f1c1349a7cee_edges.jsonl  11b92a2e-855a-40d4-9492-f1c1349a7cee_nodes.jsonl  2dbacacb-a07b-4f11-bd1c-2fbd5e7d8d23.jsonl  2dbacacb-a07b-4f11-bd1c-2fbd5e7d8d23_edges.jsonl  2dbacacb-a07b-4f11-bd1c-2fbd5e7d8d23_nodes.jsonl  3f2b92df-4c3d-4949-a9d7-de18e9491ddf.jsonl  (+29 more)
deploy/: content-producer.service
docs/: 152FZ-SETUP.md  agent-chain-design.md  api.md  architecture.md  deployment.md  development.md  interview-plan.md  privacy-policy.md
src/: api.py  api_helpers.py  auth.py  compliance.py  config.py  db_client.py  db_client_geo.py  dependencies.py  main.py  supabase_client.py
supabase/: .env.russia.example  deploy.py  docker-compose.russia.yml
tests/: test_152fz.py  test_a2a.py  test_api.py  test_api_v2.py  test_auth.py  test_auth_ownership.py  test_card.py  test_compliance.py  test_creator.py  test_db_client.py  test_dispatcher.py  test_editor.py  test_housekeeping.py  test_interviewer.py  test_memory_agent.py  test_payment.py  test_phase8_skill_auto_update.py  test_phase910_api_observability.py  test_pipeline.py  test_producer.py  test_skill_auto_update.py  test_skill_loader.py  test_social.py  test_strategist.py  test_transcriber.py
(+97 files in other folders)
