[project]
name = "content-producer"
version = "0.1.0"
description = "AI SaaS for expert content creation — interview → expert card → producer agent → content"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0",
    "yt-dlp>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
